--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <p id="description">
       Thank you for taking the time to help us improve the platform
     </p>
-    <form id="survey-form"></form>
+    <form id="survey-form">
+      <input type="text" id ="name" required>
+      <input type="email" id ="email" required>
+
+    </form>
     <script src="js/index.js"></script>
   </body>
 </html>
