--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       Thank you for taking the time to help us improve the platform
     </p>
     <form id="survey-form">
-      <input type="text" id ="name" required>
-      <input type="email" id ="email" required>
-
+      <input type="text" id="name" required />
+      <input type="email" id="email" required />
+      <input type="number" id="number" min="10" max="100" required />
     </form>
     <script src="js/index.js"></script>
   </body>
