--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <input type="radio" value="third option" name="check" />
       <br />
       <textarea> </textarea>
+      <button id="submit" type="submit">Submit Form</button>
     </form>
     <script src="js/index.js"></script>
   </body>
