add input and style

--- a/index.html
+++ b/index.html
@@ -32,15 +32,24 @@
         required
         placeholder="enter a number between 10 and 100"
       /><br />
-      <select id="dropdown"></select>
+      <select id="dropdown">
+        <option>first choice</option>
+        <option>second choice</option>
+        <option>third choice</option>
+      </select>
       <br />
-      <input type="radio" value="first option" name="check" />
+      <input type="checkbox" value="first option" name="check" />
       <br />
-      <input type="radio" value="second option" name="check" />
+      <input type="checkbox" value="second option" name="check" />
       <br />
-      <input type="radio" value="third option" name="check" />
+      <input type="checkbox" value="third option" name="check" />
+      <br />
+      <input type="radio" value="forth option" name="check" />
+      <br />
+      <input type="radio" value="fifth option" name="check" />
       <br />
       <textarea> </textarea>
+      <br />
       <button id="submit" type="submit">Submit Form</button>
     </form>
     <script src="js/index.js"></script>
